# chess-demo

./: .gitignore  README.md  build.sh  engine.js  index.html  package.sh
.github/workflows/: build-and-release-viewer.yml
chess-engine/: CHANGELOG.md  Cargo.toml  README.md
chess-engine/src/: eval.rs  lib.rs  main.rs  search.rs
viewer/: index.html
