[package]
name = "chess-engine"
version = "0.1.0"
edition = "2021"
description = "Chess engine compiled to WebAssembly — alpha-beta minimax with piece-square tables"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
shakmaty = "0.27"
serde_json = "1"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true

[profile.dev]
opt-level = 1
